Bug 691101 - Regression: character spacing issues starting with r10476
Summary: Regression: character spacing issues starting with r10476
Status: RESOLVED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: PDF Writer (show other bugs)
Version: master
Hardware: PC Linux
: P1 normal
Assignee: Ken Sharp
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-02-04 08:40 UTC by Marcos H. Woehrmann
Modified: 2010-02-08 09:51 UTC (History)
0 users

See Also:
Customer:
Word Size: ---


Attachments
gs10475.png (3.76 KB, image/png)
2010-02-04 08:46 UTC, Marcos H. Woehrmann
Details
gs10476.png (2.71 KB, image/png)
2010-02-04 08:46 UTC, Marcos H. Woehrmann
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Marcos H. Woehrmann 2010-02-04 08:40:52 UTC
See summary and attached png files.

Command line I"m using for testing:

  bin/gs -sDEVICE=pdfwrite -o test.pdf -r300 ./Bug689753.pdf
  bin/gs -sDEVICE=pkmraw -o test.pkm -r300 ./test.pdf

Files affected:

korea.ps.pdf
Bug687832.pdf.pdf
Bug687846.ps.pdf
Bug689753.pdf.pdf
Bug690372.pdf.pdf
Testform.v1.0.2.pdf.pdf
Type11CDevProc.ps.pdf
WD0010L0.pdf.pdf
Comment 1 Marcos H. Woehrmann 2010-02-04 08:41:56 UTC
Created attachment 5939 [details]
Bug689753.pdf
Comment 2 Marcos H. Woehrmann 2010-02-04 08:46:00 UTC
Created attachment 5940 [details]
gs10475.png
Comment 3 Marcos H. Woehrmann 2010-02-04 08:46:19 UTC
Created attachment 5941 [details]
gs10476.png
Comment 4 Ken Sharp 2010-02-05 00:23:06 UTC
Marcos, you have this as a pdfwrite problem, but it seems from the latest
regression report to be the same (or nearly so) for rendering, is this really
just pdfwrite ?

testdiff.py 20100204 differences from baseline (91 differences)
normal   Bug687832.pdf (pbmraw/300/banded)
normal   Bug689753.pdf (pbmraw/72/noband)
normal   Bug690372.pdf (pbmraw/72/noband)
normal   Testform.v1.0.2.pdf (pbmraw/72/noband)
normal   Type11CDevProc.ps (pbmraw/72/noband)
normal   WD0010L0.pdf (pbmraw/72/noband)
normal   jointest.ps (pbmraw/72/noband)

pdfwrite Bug687832.pdf (pkmraw/300/noband)
pdfwrite Bug687846.ps (ppmraw/300/noband)
pdfwrite Bug689753.pdf (pkmraw/300/noband)
pdfwrite Bug690372.pdf (ppmraw/300/noband)
pdfwrite Testform.v1.0.2.pdf (pkmraw/300/noband)
pdfwrite Type11CDevProc.ps (ppmraw/300/noband)
pdfwrite WD0010L0.pdf (pkmraw/300/noband)
pdfwrite jointest.ps (ppmraw/300/noband)
pdfwrite korea.ps (pkmraw/300/noband)

Admittedly there are two more in the pdfwrite tests, but other than that they
are the same set.
Comment 5 Ken Sharp 2010-02-08 09:51:19 UTC
Fixed in revisions 10722 and 10723, *both* are required to address this issue!

http://ghostscript.com/pipermail/gs-cvs/2010-February/010469.html
http://ghostscript.com/pipermail/gs-cvs/2010-February/010470.html