Fix (pdfwrite) bug #691101 (part 2 of 2)

The revisions 10474 and 10476 were intended to address an indeterminism but actually
introduced a fairly serious regression. The code was changed to return any error value
from the glyph_info method before testing the members of the 'info' structure passed to
the method. Previously one of the member could be examined when an error had meant that
the member was still uniinitialised.

However, these revision missed the fact that the glyph_info method can return a
'rangecheck' error when they require a CDevProc to be executed. Because the error code
was tested before checking for a CDevProc, the pdfwrite code never executed the
CDevproc.

This resulted in a (very) few regressions, this is because the PDF interpreter uses
a CDevProc to alter the widths of glyphs if a /W array is present in a PDF file.

The code now initialises the member of the structure to 0, which we then test before
checking the return code. If we need to run a CDevProc we now do so.

Part 2 of this commit explains some further issues with CDevProcs.

Expected Differences:
korea.ps.pdf
Bug687832.pdf.pdf
Bug687846.ps.pdf
Bug689753.pdf.pdf
Bug690372.pdf.pdf
Testform.v1.0.2.pdf.pdf
Type11CDevProc.ps.pdf
WD0010L0.pdf.pdf

Please note, on its own this will *also* introduce a number of errors with pdfwrite.
Do not use this revision without part 1 (revision 10722)!

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@10723 a1074d23-0009-0410-80fe-cf8c14f379e6